--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ description: A brief website about me
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
+plugins:
+  - jekyll-redirect-from
