Configure permalink and redirect in _config.yml
Add permalink and redirect settings for jfof.

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,7 @@ google_analytics:
 theme: jekyll-theme-minimal
 plugins:
   - jekyll-redirect-from
+---
+permalink: /jfof/
+redirect_to: https://arxiv.org/
+---
